--- a/Definitions3.html
+++ b/Definitions3.html
@@ -9,10 +9,10 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 5 --><div class='crosslinks'><p class='noindent'>[<a href='Theorems2.html'>next</a>] [<a href='#tailDefinitions3.html'>tail</a>] [<a href='RootsofUnity.html#Definitions3.html'>up</a>] </p></div>
-   <h4 class='subsectionHead' id='definitions3'><span class='titlemark'>D-2.1   </span> <a id='x29-44000D-2.1'></a>Definitions</h4>
-   <div class='tcolorbox tcolorbox' id='tcolobox-23'>     
+   <h4 class='subsectionHead' id='definitions3'><span class='titlemark'>A-7.1   </span> <a id='x26-35000A-7.1'></a>Definitions</h4>
+   <div class='tcolorbox tcolorbox' id='tcolobox-17'>     
 <div class='tcolorbox-title'>
-<!-- l. 16 --><p class='indent'>   <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Definition </span><a href='#definitions3'><span class='rm-lmbx-10x-x-109'>D-2.1</span><!-- tex4ht:ref: subsec:roots-def  --></a><!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
+<!-- l. 16 --><p class='indent'>   <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Definition </span><a href='#definitions3'><span class='rm-lmbx-10x-x-109'>A-7.1</span><!-- tex4ht:ref: subsec:roots-def  --></a><!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>Definitions for Roots of Unity</span></p></div> 
 <div class='tcolorbox-content'>   <ul class='itemize1'>
    <li class='itemize'><!-- l. 9 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝐧</mi></mstyle></math><span class='rm-lmbx-10x-x-109'>-th
