--- a/Order.html
+++ b/Order.html
@@ -8,7 +8,7 @@
 <meta content='00-main.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 378 --><div class='crosslinks'><p class='noindent'>[<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='#tailOrder.html'>tail</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
+   <!-- l. 378 --><div class='crosslinks'><p class='noindent'>[<a href='PolynomialRing.html'>next</a>] [<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='#tailOrder.html'>tail</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='order'><span class='titlemark'>A-4   </span> <a id='x14-17000A-4'></a>Order</h3>
 <!-- l. 1 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<span class='rm-lmbx-10x-x-109'>?</span>]</span>
    
@@ -20,7 +20,7 @@
 
                                                                                          
                                                                                          
-   <!-- l. 391 --><div class='crosslinks'><p class='noindent'>[<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='Order.html'>front</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
-<!-- l. 391 --><p class='indent'>   <a id='tailOrder.html'></a> </p> 
+   <!-- l. 386 --><div class='crosslinks'><p class='noindent'>[<a href='PolynomialRing.html'>next</a>] [<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='Order.html'>front</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
+<!-- l. 386 --><p class='indent'>   <a id='tailOrder.html'></a> </p> 
 </body> 
 </html>
