--- a/RootsofUnity.html
+++ b/RootsofUnity.html
@@ -8,16 +8,16 @@
 <meta content='00-main.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 413 --><div class='crosslinks'><p class='noindent'>[<a href='TFHEScheme.html'>prev</a>] [<a href='TFHEScheme.html#tailTFHEScheme.html'>prev-tail</a>] [<a href='#tailRootsofUnity.html'>tail</a>] [<a href='FullyHomomorphicEncryptionSchemes.html#RootsofUnity.html'>up</a>] </p></div>
-   <h3 class='sectionHead' id='roots-of-unity'><span class='titlemark'>D-2   </span> <a id='x28-43000D-2'></a>Roots of Unity</h3>
+   <!-- l. 399 --><div class='crosslinks'><p class='noindent'>[<a href='Decomposition.html'>prev</a>] [<a href='Decomposition.html#tailDecomposition.html'>prev-tail</a>] [<a href='#tailRootsofUnity.html'>tail</a>] [<a href='BasicMath.html#RootsofUnity.html'>up</a>] </p></div>
+   <h3 class='sectionHead' id='roots-of-unity'><span class='titlemark'>A-7   </span> <a id='x25-34000A-7'></a>Roots of Unity</h3>
 <!-- l. 1 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<span class='rm-lmbx-10x-x-109'>?</span>]</span>
    
 </p>
    <div class='subsectionTOCS'>
-   <span class='subsectionToc'>D-2.1 <a href='Definitions3.html#definitions3'>Definitions</a></span>
-<br />   <span class='subsectionToc'>D-2.2 <a href='Theorems2.html#theorems2'>Theorems</a></span>
+   <span class='subsectionToc'>A-7.1 <a href='Definitions3.html#definitions3'>Definitions</a></span>
+<br />   <span class='subsectionToc'>A-7.2 <a href='Theorems2.html#theorems2'>Theorems</a></span>
    </div>
-<!-- l. 430 --><div class='crosslinks'><p class='noindent'>[<a href='TFHEScheme.html'>prev</a>] [<a href='TFHEScheme.html#tailTFHEScheme.html'>prev-tail</a>] [<a href='RootsofUnity.html'>front</a>] [<a href='FullyHomomorphicEncryptionSchemes.html#RootsofUnity.html'>up</a>] </p></div>
-<!-- l. 430 --><p class='indent'>   <a id='tailRootsofUnity.html'></a> </p> 
+<!-- l. 416 --><div class='crosslinks'><p class='noindent'>[<a href='Decomposition.html'>prev</a>] [<a href='Decomposition.html#tailDecomposition.html'>prev-tail</a>] [<a href='RootsofUnity.html'>front</a>] [<a href='BasicMath.html#RootsofUnity.html'>up</a>] </p></div>
+<!-- l. 416 --><p class='indent'>   <a id='tailRootsofUnity.html'></a> </p> 
 </body> 
 </html>
