deploy: c8dfdafc5a64249f9149e60036a674ac240fda27

--- a/FullyHomomorphicEncryptionSchemes.html
+++ b/FullyHomomorphicEncryptionSchemes.html
@@ -19,13 +19,22 @@ their RNS-variant versions.
 </p>
    <div class='sectionTOCS'>
    <span class='sectionToc'>D-1 <a href='TFHEScheme.html#tfhe-scheme'>TFHE Scheme</a></span>
+<br />   <span class='subsectionToc'>D-1.1 <a href='EncryptionandDecryption.html#encryption-and-decryption'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-1.2 <a href='HomomorphicCiphertexttoCiphertextAddition.html#homomorphic-ciphertexttociphertext-addition'>Homomorphic Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-1.3 <a href='HomomorphicCiphertexttoPlaintextAddition.html#homomorphic-ciphertexttoplaintext-addition'>Homomorphic Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-1.4 <a href='HomomorphicCiphertexttoPlaintextMultiplication.html#homomorphic-ciphertexttoplaintext-multiplication'>Homomorphic Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-1.5 <a href='HomomorphicKeySwitching.html#homomorphic-key-switching'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-1.6 <a href='HomomorphicCiphertexttoCiphertextMultiplication.html#homomorphic-ciphertexttociphertext-multiplication'>Homomorphic Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction'>Coefficient Extraction</a></span>
+<br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
+<br />   <span class='subsectionToc'>D-1.9 <a href='TFHEonaDiscreteTorus.html#tfhe-on-a-discrete-torus'>TFHE on a Discrete Torus</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
    </div>
-
+<p></p>
 
 
 
@@ -33,6 +42,6 @@ their RNS-variant versions.
                                                                                          
                                                                                          
    <!-- l. 640 --><div class='crosslinks'><p class='noindent'>[<a href='GenericFullyHomomorphicEncryption.html'>prev</a>] [<a href='GenericFullyHomomorphicEncryption.html#tailGenericFullyHomomorphicEncryption.html'>prev-tail</a>] [<a href='FullyHomomorphicEncryptionSchemes.html'>front</a>] [<a href='00-main.html#FullyHomomorphicEncryptionSchemes.html'>up</a>] </p></div>
-<!-- l. 640 --><p class='indent'>   <a id='tailFullyHomomorphicEncryptionSchemes.html'></a> </p> 
+<!-- l. 640 --><p class='indent'>   <a id='tailFullyHomomorphicEncryptionSchemes.html'></a>  </p> 
 </body> 
 </html>
