--- a/PolynomialDecomposition.html
+++ b/PolynomialDecomposition.html
@@ -91,7 +91,7 @@ This characteristic is importantly used in homomorphic encryption’s multiplica
 growth rate of the noise. Normally, the polynomial coefficients of ciphertexts are large because
 they are uniformly random numbers. Reducing such big constants is important to reduce
 the noise growth during homomorphic multiplication. We will discuss this more in detail in
-<span class='rm-lmbx-10x-x-109'>??</span>.
+<a href='HomomorphicCiphertexttoCiphertextMultiplication.html#homomorphic-ciphertexttociphertext-multiplication'><span class='ts1-lmr10-x-x-109'>§</span>D-1.6<!-- tex4ht:ref: subsec:coeff-rotation  --></a>.
                                                                                          
                                                                                          
 </p>
