--- a/00-main.html
+++ b/00-main.html
@@ -176,11 +176,20 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='sectionToc'>C-5 <a href='GLWEKeySwitching.html#glwe-key-switching' id='QQ2-93-129'>GLWE Key Switching</a></span>
 <br />   <span class='partToc'>IV  <a href='FullyHomomorphicEncryptionSchemes.html#fully-homomorphic-encryption-schemes' id='QQ2-94-130'>Fully Homomorphic Encryption Schemes</a></span>
 <br />   <span class='sectionToc'>D-1 <a href='TFHEScheme.html#tfhe-scheme' id='QQ2-95-131'>TFHE Scheme</a></span>
-<br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme' id='QQ2-96-132'>BFV Scheme</a></span>
-<br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme' id='QQ2-97-133'>CKKS Scheme</a></span>
-<br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-98-134'>BGV Scheme</a></span>
-<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-99-135'>RNS-variant FHE Schemes</a></span>
-<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-100-136'>FHE Scheme Comparison and Summary</a></span>
+<br />   <span class='subsectionToc'>D-1.1 <a href='EncryptionandDecryption.html#encryption-and-decryption' id='QQ2-96-132'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-1.2 <a href='HomomorphicCiphertexttoCiphertextAddition.html#homomorphic-ciphertexttociphertext-addition' id='QQ2-97-133'>Homomorphic Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-1.3 <a href='HomomorphicCiphertexttoPlaintextAddition.html#homomorphic-ciphertexttoplaintext-addition' id='QQ2-98-134'>Homomorphic Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-1.4 <a href='HomomorphicCiphertexttoPlaintextMultiplication.html#homomorphic-ciphertexttoplaintext-multiplication' id='QQ2-99-135'>Homomorphic Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-1.5 <a href='HomomorphicKeySwitching.html#homomorphic-key-switching' id='QQ2-100-136'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-1.6 <a href='HomomorphicCiphertexttoCiphertextMultiplication.html#homomorphic-ciphertexttociphertext-multiplication' id='QQ2-101-137'>Homomorphic Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction' id='QQ2-102-140'>Coefficient Extraction</a></span>
+<br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping' id='QQ2-103-141'>Noise Bootstrapping</a></span>
+<br />   <span class='subsectionToc'>D-1.9 <a href='TFHEonaDiscreteTorus.html#tfhe-on-a-discrete-torus' id='QQ2-104-157'>TFHE on a Discrete Torus</a></span>
+<br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme' id='QQ2-105-158'>BFV Scheme</a></span>
+<br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme' id='QQ2-106-159'>CKKS Scheme</a></span>
+<br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-107-160'>BGV Scheme</a></span>
+<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-108-161'>RNS-variant FHE Schemes</a></span>
+<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-109-162'>FHE Scheme Comparison and Summary</a></span>
    </div>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x1-1000'></a>Acknowledgments</h5>
 <!-- l. 295 --><p class='noindent'>Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and dedicated comments,
