--- a/CoefficientExtraction.html
+++ b/CoefficientExtraction.html
@@ -8,7 +8,7 @@
 <meta content='00-main.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 377 --><div class='crosslinks'><p class='noindent'>[<a href='NoiseBootstrapping.html'>next</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html'>prev</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html#tailHomomorphicCiphertexttoCiphertextMultiplication.html'>prev-tail</a>] [<a href='#tailCoefficientExtraction.html'>tail</a>] [<a href='TFHEScheme.html#CoefficientExtraction.html'>up</a>] </p></div>
+   <!-- l. 377 --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicCiphertexttoCiphertextMultiplication.html'>prev</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html#tailHomomorphicCiphertexttoCiphertextMultiplication.html'>prev-tail</a>] [<a href='#tailCoefficientExtraction.html'>tail</a>] [<a href='TFHEScheme.html#CoefficientExtraction.html'>up</a>] </p></div>
    <h4 class='subsectionHead' id='coefficient-extraction'><span class='titlemark'>D-1.7   </span> <a id='x102-126000D-1.7'></a>Coefficient Extraction</h4>
 <!-- l. 380 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://www.zama.ai/post/tfhe-deep-dive-part-4'>TFHE Deep Dive - Part IV - Programmable Bootstrapping</a> <span class='cite'>[<span class='rm-lmbx-10x-x-109'>?</span>]</span>
 </p><!-- l. 383 --><p class='indent'>   <!-- l. 383 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
@@ -176,9 +176,11 @@ key-switch it from <!-- l. 521 --><math display='inline' xmlns='http://www.w3.or
  
 </div> 
 </div>
+<!-- l. 594 --><p class='indent'>
                                                                                          
                                                                                          
-   <!-- l. 527 --><div class='crosslinks'><p class='noindent'>[<a href='NoiseBootstrapping.html'>next</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html'>prev</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html#tailHomomorphicCiphertexttoCiphertextMultiplication.html'>prev-tail</a>] [<a href='CoefficientExtraction.html'>front</a>] [<a href='TFHEScheme.html#CoefficientExtraction.html'>up</a>] </p></div>
-<!-- l. 527 --><p class='indent'>   <a id='tailCoefficientExtraction.html'></a> </p> 
+</p>
+   <!-- l. 596 --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicCiphertexttoCiphertextMultiplication.html'>prev</a>] [<a href='HomomorphicCiphertexttoCiphertextMultiplication.html#tailHomomorphicCiphertexttoCiphertextMultiplication.html'>prev-tail</a>] [<a href='CoefficientExtraction.html'>front</a>] [<a href='TFHEScheme.html#CoefficientExtraction.html'>up</a>] </p></div>
+<!-- l. 596 --><p class='indent'>   <a id='tailCoefficientExtraction.html'></a> </p> 
 </body> 
 </html>
