--- a/FullyHomomorphicEncryptionSchemes.html
+++ b/FullyHomomorphicEncryptionSchemes.html
@@ -26,6 +26,7 @@ their RNS-variant versions.
 <br />   <span class='subsectionToc'>D-1.5 <a href='HomomorphicKeySwitching.html#homomorphic-key-switching'>Homomorphic Key Switching</a></span>
 <br />   <span class='subsectionToc'>D-1.6 <a href='HomomorphicCiphertexttoCiphertextMultiplication.html#homomorphic-ciphertexttociphertext-multiplication'>Homomorphic Ciphertext-to-Ciphertext Multiplication</a></span>
 <br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction'>Coefficient Extraction</a></span>
+<br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
