--- a/contentsname.html
+++ b/contentsname.html
@@ -149,6 +149,10 @@ Dividing <!-- l. 94 --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsubsectionToc'>D-1.6.1 <a href='HomomorphicCiphertexttoCiphertextMultiplication.html#discussion-on-the-noise-growth' id='QQ2-101-138'>Discussion on the Noise Growth</a></span>
 <br />   <span class='subsubsectionToc'>D-1.6.2 <a href='HomomorphicCiphertexttoCiphertextMultiplication.html#generalization-to-glwetoggsw-multiplication' id='QQ2-101-139'>Generalization to GLWE-to-GGSW Multiplication</a></span>
 <br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction'>Coefficient Extraction</a></span>
+<br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.1 <a href='NoiseBootstrapping.html#overview3' id='QQ2-103-142'>Overview</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-boootstrapping' id='QQ2-103-143'>Modulus Switch for Noise Boootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.3 <a href='NoiseBootstrapping.html#halving-the-plaintext-space-to-be-used' id='QQ2-103-144'>Halving the Plaintext Space To be Used</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
