--- a/TFHEScheme.html
+++ b/TFHEScheme.html
@@ -76,6 +76,10 @@ multiplication, coefficient extraction, and noise bootstrapping.
 <br />   <span class='subsubsectionToc'>D-1.8.1 <a href='NoiseBootstrapping.html#overview3'>Overview</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-boootstrapping'>Modulus Switch for Noise Boootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.3 <a href='NoiseBootstrapping.html#halving-the-plaintext-space-to-be-used'>Halving the Plaintext Space To be Used</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.4 <a href='NoiseBootstrapping.html#blind-rotation'>Blind Rotation</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1'>Coefficient Extraction</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.6 <a href='NoiseBootstrapping.html#noise-bootstrapping-summary'>Noise Bootstrapping Summary</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.7 <a href='NoiseBootstrapping.html#example-noise-bootstrapping'>Example: Noise Bootstrapping</a></span>
    </div>
 
 
