--- a/contentsname.html
+++ b/contentsname.html
@@ -153,6 +153,10 @@ Dividing <!-- l. 94 --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsubsectionToc'>D-1.8.1 <a href='NoiseBootstrapping.html#overview3' id='QQ2-103-142'>Overview</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-boootstrapping' id='QQ2-103-143'>Modulus Switch for Noise Boootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.3 <a href='NoiseBootstrapping.html#halving-the-plaintext-space-to-be-used' id='QQ2-103-144'>Halving the Plaintext Space To be Used</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.4 <a href='NoiseBootstrapping.html#blind-rotation' id='QQ2-103-145'>Blind Rotation</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1' id='QQ2-103-147'>Coefficient Extraction</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.6 <a href='NoiseBootstrapping.html#noise-bootstrapping-summary' id='QQ2-103-148'>Noise Bootstrapping Summary</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.7 <a href='NoiseBootstrapping.html#example-noise-bootstrapping' id='QQ2-103-149'>Example: Noise Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
