deploy: e4292dc29c2c0f18bb0df65c6c22fc4a93762d50

--- a/TFHEScheme.html
+++ b/TFHEScheme.html
@@ -80,6 +80,8 @@ multiplication, coefficient extraction, and noise bootstrapping.
 <br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1'>Coefficient Extraction</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.6 <a href='NoiseBootstrapping.html#noise-bootstrapping-summary'>Noise Bootstrapping Summary</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.7 <a href='NoiseBootstrapping.html#example-noise-bootstrapping'>Example: Noise Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.8 <a href='NoiseBootstrapping.html#discussion6'>Discussion</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.9 <a href='NoiseBootstrapping.html#application-gate-bootstrapping'>Application: Gate Bootstrapping</a></span>
    </div>
 
 
