--- a/contentsname.html
+++ b/contentsname.html
@@ -157,6 +157,8 @@ Dividing <!-- l. 94 --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1' id='QQ2-103-147'>Coefficient Extraction</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.6 <a href='NoiseBootstrapping.html#noise-bootstrapping-summary' id='QQ2-103-148'>Noise Bootstrapping Summary</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.7 <a href='NoiseBootstrapping.html#example-noise-bootstrapping' id='QQ2-103-149'>Example: Noise Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.8 <a href='NoiseBootstrapping.html#discussion6' id='QQ2-103-151'>Discussion</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.9 <a href='NoiseBootstrapping.html#application-gate-bootstrapping' id='QQ2-103-152'>Application: Gate Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
