--- a/TFHEScheme.html
+++ b/TFHEScheme.html
@@ -82,6 +82,7 @@ multiplication, coefficient extraction, and noise bootstrapping.
 <br />   <span class='subsubsectionToc'>D-1.8.7 <a href='NoiseBootstrapping.html#example-noise-bootstrapping'>Example: Noise Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.8 <a href='NoiseBootstrapping.html#discussion6'>Discussion</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.9 <a href='NoiseBootstrapping.html#application-gate-bootstrapping'>Application: Gate Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.10 <a href='NoiseBootstrapping.html#application-neural-networks-bootstrapping'>Application: Neural Networks Bootstrapping</a></span>
    </div>
 
 
