deploy: 66310a69f58deb1e92d214e5cee658af347b4352

--- a/TFHEonaDiscreteTorus.html
+++ b/TFHEonaDiscreteTorus.html
@@ -10,7 +10,9 @@
 </head><body>
    <!-- l. 1161 --><div class='crosslinks'><p class='noindent'>[<a href='NoiseBootstrapping.html'>prev</a>] [<a href='NoiseBootstrapping.html#tailNoiseBootstrapping.html'>prev-tail</a>] [<a href='#tailTFHEonaDiscreteTorus.html'>tail</a>] [<a href='TFHEScheme.html#TFHEonaDiscreteTorus.html'>up</a>] </p></div>
    <h4 class='subsectionHead' id='tfhe-on-a-discrete-torus'><span class='titlemark'>D-1.9   </span> <a id='x104-138000D-1.9'></a>TFHE on a Discrete Torus</h4>
-<!-- l. 594 --><p class='noindent'>
+<!-- l. 1164 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://eprint.iacr.org/2021/1402.pdf'>Guide to Fully Homomorphic Encryption over the [Discretized] Torus</a> <span class='cite'>[<span class='rm-lmbx-10x-x-109'>?</span>]</span>
+</p><!-- l. 1169 --><p class='indent'>   <!-- l. 1169 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
+</p><!-- l. 594 --><p class='indent'>
                                                                                          
                                                                                          
 </p>
