deploy: c7d59335ab6c6e4c6e1e70e5bf4249064f33e113

--- a/FullyHomomorphicEncryptionSchemes.html
+++ b/FullyHomomorphicEncryptionSchemes.html
@@ -29,13 +29,24 @@ their RNS-variant versions.
 <br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
 <br />   <span class='subsectionToc'>D-1.9 <a href='TFHEonaDiscreteTorus.html#tfhe-on-a-discrete-torus'>TFHE on a Discrete Torus</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
+<br />   <span class='subsectionToc'>D-2.1 <a href='SingleValueEncoding.html#single-value-encoding'>Single Value Encoding</a></span>
+<br />   <span class='subsectionToc'>D-2.2 <a href='BatchEncoding.html#batch-encoding'>Batch Encoding</a></span>
+<br />   <span class='subsectionToc'>D-2.3 <a href='EncryptionandDecryption1.html#encryption-and-decryption1'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-2.4 <a href='CiphertexttoCiphertextAddition.html#ciphertexttociphertext-addition'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.5 <a href='CiphertexttoPlaintextAddition.html#ciphertexttoplaintext-addition'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.6 <a href='CiphertexttoPlaintextMultiplication.html#ciphertexttoplaintext-multiplication'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.7 <a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.8 <a href='HomomorphicKeySwitching1.html#homomorphic-key-switching1'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-2.9 <a href='HomomorphicRotationofInputVectorSlots.html#homomorphic-rotation-of-input-vector-slots'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsectionToc'>D-2.10 <a href='ApplicationMatrixMultiplication.html#application-matrix-multiplication'>Application: Matrix Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.11 <a href='NoiseBootstrapping1.html#noise-bootstrapping1'>Noise Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
    </div>
 <p></p>
-
+<p></p>
 
 
 
