--- a/LWEModulusSwitching.html
+++ b/LWEModulusSwitching.html
@@ -52,7 +52,7 @@ because the noise gets rounded away after decryption, anyway), and
 down to a smaller <!-- l. 34 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>Â</mi></math>.
 Modulus switch is used for computational efficiency during TFHE’s bootstrapping (which will be
 discussed in <a href='NoiseBootstrapping.html#noise-bootstrapping'><span class='ts1-lmr10-x-x-109'>§</span>D-1.8<!-- tex4ht:ref: subsubsec:scaling-factor-computation  --></a>). Modulus switch is also used for implementing the ciphertext-to-ciphertext
-multiplication algorithm in BGV (<span class='rm-lmbx-10x-x-109'>??</span>) and CKKS (<span class='rm-lmbx-10x-x-109'>??</span>).
+multiplication algorithm in BGV (<a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication'><span class='ts1-lmr10-x-x-109'>§</span>D-2.7<!-- tex4ht:ref: subsubsec:scaling-factor-computation  --></a>) and CKKS (<span class='rm-lmbx-10x-x-109'>??</span>).
 </p><!-- l. 36 --><p class='indent'>   The high-level idea of LWE modulus switch is to rescale the congruence relationship of
 the LWE scheme. LWE’s homomorphic computation algorithms include the followings:
                                                                                          
