--- a/VandermondeMatrixwithRootsofaCyclotomicPolynomial.html
+++ b/VandermondeMatrixwithRootsofaCyclotomicPolynomial.html
@@ -178,7 +178,7 @@ and <!-- l. 156 --><math display='inline' xmlns='http://www.w3.org/1998/Math/Mat
 scheme (<a href='BFVScheme.html#bfv-scheme'><span class='ts1-lmr10-x-x-109'>§</span>D-2<!-- tex4ht:ref: subsec:vandermonde-euler  --></a>), we will use <!-- l. 156 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>V</mi> </mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math>
 to encode an integer vector into a vector of polynomial coefficients, and
 <!-- l. 156 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>V</mi> </mrow><mrow><mi>T</mi> </mrow></msup></math> to
-decode it back to the integer vector (<span class='rm-lmbx-10x-x-109'>??</span>).
+decode it back to the integer vector (<a href='BatchEncoding.html#batch-encoding'><span class='ts1-lmr10-x-x-109'>§</span>D-2.2<!-- tex4ht:ref: subsec:vandermonde-euler  --></a>).
 </p><!-- l. 158 --><p class='indent'>   <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 160 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Condition for </span><!-- l. 160 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝛍</mi></mstyle></math><span class='rm-lmbx-10x-x-109'>:</span>
 Like in CKSS, it’s worthwhile to note that the property
