--- a/00-main.html
+++ b/00-main.html
@@ -186,12 +186,25 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping' id='QQ2-103-141'>Noise Bootstrapping</a></span>
 <br />   <span class='subsectionToc'>D-1.9 <a href='TFHEonaDiscreteTorus.html#tfhe-on-a-discrete-torus' id='QQ2-104-157'>TFHE on a Discrete Torus</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme' id='QQ2-105-158'>BFV Scheme</a></span>
-<br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme' id='QQ2-106-159'>CKKS Scheme</a></span>
-<br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-107-160'>BGV Scheme</a></span>
-<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-108-161'>RNS-variant FHE Schemes</a></span>
-<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-109-162'>FHE Scheme Comparison and Summary</a></span>
+<br />   <span class='subsectionToc'>D-2.1 <a href='SingleValueEncoding.html#single-value-encoding' id='QQ2-106-159'>Single Value Encoding</a></span>
+<br />   <span class='subsectionToc'>D-2.2 <a href='BatchEncoding.html#batch-encoding' id='QQ2-107-160'>Batch Encoding</a></span>
+<br />   <span class='subsectionToc'>D-2.3 <a href='EncryptionandDecryption1.html#encryption-and-decryption1' id='QQ2-108-166'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-2.4 <a href='CiphertexttoCiphertextAddition.html#ciphertexttociphertext-addition' id='QQ2-109-167'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.5 <a href='CiphertexttoPlaintextAddition.html#ciphertexttoplaintext-addition' id='QQ2-110-168'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.6 <a href='CiphertexttoPlaintextMultiplication.html#ciphertexttoplaintext-multiplication' id='QQ2-111-169'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.7 <a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication' id='QQ2-112-170'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.8 <a href='HomomorphicKeySwitching1.html#homomorphic-key-switching1' id='QQ2-113-176'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-2.9 <a href='HomomorphicRotationofInputVectorSlots.html#homomorphic-rotation-of-input-vector-slots' id='QQ2-114-177'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsectionToc'>D-2.10 <a href='ApplicationMatrixMultiplication.html#application-matrix-multiplication' id='QQ2-115-183'>Application: Matrix Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.11 <a href='NoiseBootstrapping1.html#noise-bootstrapping1' id='QQ2-116-184'>Noise Bootstrapping</a></span>
+<br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme' id='QQ2-117-192'>CKKS Scheme</a></span>
+<br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-118-193'>BGV Scheme</a></span>
+<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-119-194'>RNS-variant FHE Schemes</a></span>
+<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-120-195'>FHE Scheme Comparison and Summary</a></span>
    </div>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x1-1000'></a>Acknowledgments</h5>
+                                                                                         
+                                                                                         
 <!-- l. 295 --><p class='noindent'>Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and dedicated comments,
 and to Yongwoo Lee (Inha University) for his general advice.
 </p><!-- l. 299 --><p class='indent'>
