--- a/contentsname.html
+++ b/contentsname.html
@@ -162,6 +162,42 @@ Dividing <!-- l. 94 --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsubsectionToc'>D-1.8.10 <a href='NoiseBootstrapping.html#application-neural-networks-bootstrapping' id='QQ2-103-154'>Application: Neural Networks Bootstrapping</a></span>
 <br />   <span class='subsectionToc'>D-1.9 <a href='TFHEonaDiscreteTorus.html#tfhe-on-a-discrete-torus'>TFHE on a Discrete Torus</a></span>
 <br />   <span class='sectionToc'>D-2 <a href='BFVScheme.html#bfv-scheme'>BFV Scheme</a></span>
+<br />   <span class='subsectionToc'>D-2.1 <a href='SingleValueEncoding.html#single-value-encoding'>Single Value Encoding</a></span>
+<br />   <span class='subsectionToc'>D-2.2 <a href='BatchEncoding.html#batch-encoding'>Batch Encoding</a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.1 <a href='BatchEncoding.html#encoding-' id='QQ2-107-161'><span class='rm-lmss-10x-x-109'>Encoding</span><sub class='textsubscript'><span class='rm-lmss-10'>1</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.2 <a href='BatchEncoding.html#encoding-1' id='QQ2-107-162'><span class='rm-lmss-10x-x-109'>Encoding</span><sub class='textsubscript'><span class='rm-lmss-10'>2</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.3 <a href='BatchEncoding.html#decoding-' id='QQ2-107-163'><span class='rm-lmss-10x-x-109'>Decoding</span><sub class='textsubscript'><span class='rm-lmss-10'>1</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.4 <a href='BatchEncoding.html#decoding-1' id='QQ2-107-164'><span class='rm-lmss-10x-x-109'>Decoding</span><sub class='textsubscript'><span class='rm-lmss-10'>2</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.5 <a href='BatchEncoding.html#summary' id='QQ2-107-165'>Summary</a></span>
+<br />   <span class='subsectionToc'>D-2.3 <a href='EncryptionandDecryption1.html#encryption-and-decryption1'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-2.4 <a href='CiphertexttoCiphertextAddition.html#ciphertexttociphertext-addition'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.5 <a href='CiphertexttoPlaintextAddition.html#ciphertexttoplaintext-addition'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-2.6 <a href='CiphertexttoPlaintextMultiplication.html#ciphertexttoplaintext-multiplication'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.7 <a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsubsectionToc'>D-2.7.1 <a href='CiphertexttoCiphertextMultiplication.html#modraise' id='QQ2-112-171'><span class='rm-lmss-10x-x-109'>ModRaise</span></a></span>
+<br />   <span class='subsubsectionToc'>D-2.7.2 <a href='CiphertexttoCiphertextMultiplication.html#polynomial-multiplication' id='QQ2-112-172'>Polynomial Multiplication</a></span>
+<br />   <span class='subsubsectionToc'>D-2.7.3 <a href='CiphertexttoCiphertextMultiplication.html#relinearization' id='QQ2-112-173'>Relinearization</a></span>
+<br />   <span class='subsubsectionToc'>D-2.7.4 <a href='CiphertexttoCiphertextMultiplication.html#rescaling' id='QQ2-112-174'>Rescaling</a></span>
+<br />   <span class='subsubsectionToc'>D-2.7.5 <a href='CiphertexttoCiphertextMultiplication.html#summary1' id='QQ2-112-175'>Summary</a></span>
+<br />   <span class='subsectionToc'>D-2.8 <a href='HomomorphicKeySwitching1.html#homomorphic-key-switching1'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-2.9 <a href='HomomorphicRotationofInputVectorSlots.html#homomorphic-rotation-of-input-vector-slots'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsubsectionToc'>D-2.9.1 <a href='HomomorphicRotationofInputVectorSlots.html#rotating-input-vector-slots-by-updating-the-plaintext-polynomial' id='QQ2-114-178'>Rotating Input Vector Slots by Updating the Plaintext Polynomial</a></span>
+<br />   <span class='subsubsectionToc'>D-2.9.2 <a href='HomomorphicRotationofInputVectorSlots.html#updating-the-plaintext-polynomial-by-updating-the-ciphertext-polynomials' id='QQ2-114-179'>Updating the Plaintext Polynomial by Updating the Ciphertext
+Polynomials</a></span>
+<br />   <span class='subsubsectionToc'>D-2.9.3 <a href='HomomorphicRotationofInputVectorSlots.html#summary2' id='QQ2-114-180'>Summary</a></span>
+<br />   <span class='subsubsectionToc'>D-2.9.4 <a href='HomomorphicRotationofInputVectorSlots.html#encoding-example' id='QQ2-114-181'>Encoding Example</a></span>
+<br />   <span class='subsubsectionToc'>D-2.9.5 <a href='HomomorphicRotationofInputVectorSlots.html#rotation-example' id='QQ2-114-182'>Rotation Example</a></span>
+<br />   <span class='subsectionToc'>D-2.10 <a href='ApplicationMatrixMultiplication.html#application-matrix-multiplication'>Application: Matrix Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-2.11 <a href='NoiseBootstrapping1.html#noise-bootstrapping1'>Noise Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.1 <a href='NoiseBootstrapping1.html#highlevel-idea1' id='QQ2-116-185'>High-level Idea</a></span>
+                                                                                         
+                                                                                         
+<br />   <span class='subsubsectionToc'>D-2.11.2 <a href='NoiseBootstrapping1.html#modulus-switch' id='QQ2-116-186'>Modulus Switch</a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.3 <a href='NoiseBootstrapping1.html#homomorphic-decryption' id='QQ2-116-187'>Homomorphic Decryption</a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.4 <a href='NoiseBootstrapping1.html#coefftoslot-and-slottocoeff' id='QQ2-116-188'><span class='rm-lmss-10x-x-109'>CoeffToSlot </span>and <span class='rm-lmss-10x-x-109'>SlotToCoeff</span></a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.5 <a href='NoiseBootstrapping1.html#digit-extraction' id='QQ2-116-189'>Digit Extraction</a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.6 <a href='NoiseBootstrapping1.html#scaling-factor-reinterpretation' id='QQ2-116-190'>Scaling Factor Re-interpretation</a></span>
+<br />   <span class='subsubsectionToc'>D-2.11.7 <a href='NoiseBootstrapping1.html#summary3' id='QQ2-116-191'>Summary</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
