deploy: 9a614a92d341254d59bd54daf5897bf4e286f1e8

--- a/ApplicationMatrixMultiplication.html
+++ b/ApplicationMatrixMultiplication.html
@@ -61,9 +61,9 @@ follows:
 </p><!-- l. 1776 --><p class='indent'>   , whose computation result is equivalent to <!-- l. 1776 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>A</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true'>→</mo></mover></mrow></math>.
 The above formula is compatible with homomorphic computation, because BFV
 supports Hadamard dot product between input vectors as a ciphertext-to-plaintext
-multiplication between their polynomial-encoded forms (<span class='rm-lmbx-10x-x-109'>??</span>), and BFV also supports
+multiplication between their polynomial-encoded forms (<a href='CiphertexttoPlaintextMultiplication1.html#ciphertexttoplaintext-multiplication1'><span class='ts1-lmr10-x-x-109'>§</span>D-3.6<!-- tex4ht:ref: subsec:vector-arithmetic  --></a>), and BFV also supports
 <!-- l. 1777 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ρ</mi><mo class='MathClass-open' stretchy='false'>(</mo><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover><mo class='MathClass-punc' stretchy='false'>,</mo><mi>h</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> as homomorphic
-input vector slot rotation (<span class='rm-lmbx-10x-x-109'>??</span>). After homomorphically computing the above formula, we can consider only the
+input vector slot rotation (<a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1'><span class='ts1-lmr10-x-x-109'>§</span>D-3.9<!-- tex4ht:ref: subsec:vector-arithmetic  --></a>). After homomorphically computing the above formula, we can consider only the
 first <!-- l. 1777 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>m</mi></math> (out of
 <!-- l. 1777 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>) resulting input vector
 slots to store the result of <!-- l. 1777 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>A</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mover accent='true'><mrow><mi>x</mi></mrow><mo accent='true'>→</mo></mover></mrow></math>.
