--- a/contentsname.html
+++ b/contentsname.html
@@ -199,6 +199,29 @@ Polynomials</a></span>
 <br />   <span class='subsubsectionToc'>D-2.11.6 <a href='NoiseBootstrapping1.html#scaling-factor-reinterpretation' id='QQ2-116-190'>Scaling Factor Re-interpretation</a></span>
 <br />   <span class='subsubsectionToc'>D-2.11.7 <a href='NoiseBootstrapping1.html#summary3' id='QQ2-116-191'>Summary</a></span>
 <br />   <span class='sectionToc'>D-3 <a href='CKKSScheme.html#ckks-scheme'>CKKS Scheme</a></span>
+<br />   <span class='subsectionToc'>D-3.1 <a href='EncodingandDecoding.html#encoding-and-decoding'>Encoding and Decoding</a></span>
+<br />   <span class='subsubsectionToc'>D-3.1.1 <a href='EncodingandDecoding.html#example6' id='QQ2-118-194'>Example</a></span>
+<br />   <span class='subsectionToc'>D-3.2 <a href='EncryptionandDecryption2.html#encryption-and-decryption2'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-3.3 <a href='CiphertexttoCiphertextAddition1.html#ciphertexttociphertext-addition1'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-3.4 <a href='CiphertexttoPlaintextAddition1.html#ciphertexttoplaintext-addition1'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-3.5 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#homomorphic-ciphertexttociphertext-multiplication1'>Homomorphic Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.1 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#synthetic-ciphertext-derivation' id='QQ2-122-199'>Synthetic Ciphertext Derivation</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.2 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-decomposition' id='QQ2-122-200'>Relinearization Method 1 – Ciphertext Decomposition</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.3 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#relinearization-method-ciphertext-modulus-switch' id='QQ2-122-201'>Relinearization Method 2 – Ciphertext Modulus Switch</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.4 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#rescaling1' id='QQ2-122-202'>Rescaling</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.5 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#comparing-bfv-and-ckks-bootstrapping' id='QQ2-122-203'>Comparing BFV and CKKS Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-3.5.6 <a href='HomomorphicCiphertexttoCiphertextMultiplication1.html#summary4' id='QQ2-122-204'>Summary</a></span>
+<br />   <span class='subsectionToc'>D-3.6 <a href='CiphertexttoPlaintextMultiplication1.html#ciphertexttoplaintext-multiplication1'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-3.7 <a href='textsfModDrop.html#moddrop'><span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.7.1 <a href='textsfModDrop.html#difference-between-modulus-switch-and-moddrop' id='QQ2-124-207'>Difference between Modulus Switch and <span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
+<br />   <span class='subsectionToc'>D-3.8 <a href='HomomorphicKeySwitching2.html#homomorphic-key-switching2'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-3.9 <a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsubsectionToc'>D-3.9.1 <a href='HomomorphicRotationofInputVectorSlots1.html#example7' id='QQ2-126-210'>Example</a></span>
+<br />   <span class='subsectionToc'>D-3.10 <a href='ContemplationonCKKSEncoding.html#contemplation-on-ckks-encoding'>Contemplation on CKKS Encoding</a></span>
+<br />   <span class='subsectionToc'>D-3.11 <a href='HomomorphicConjugation.html#homomorphic-conjugation'>Homomorphic Conjugation</a></span>
+<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext'>Sparsely Packing Ciphertext</a></span>
+<br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertext.html#forward-proof-decoding-of-sparsely-packed-ciphertext' id='QQ2-129-214'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
+<br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
