--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -137,6 +137,7 @@ rings.
 <br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext'>Sparsely Packing Ciphertext</a></span>
 <br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertext.html#forward-proof-decoding-of-sparsely-packed-ciphertext'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.1 <a href='ModulusBootstrapping.html#highlevel-idea2'>High-level Idea</a></span>
    </div>
 
 
