deploy: 9e0c1ce259fdfce2d5e4c621ac7b999f9560a99a

--- a/contentsname.html
+++ b/contentsname.html
@@ -223,6 +223,13 @@ Polynomials</a></span>
 <br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertext.html#forward-proof-decoding-of-sparsely-packed-ciphertext' id='QQ2-129-214'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.1 <a href='ModulusBootstrapping.html#highlevel-idea2' id='QQ2-130-216'>High-level Idea</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.2 <a href='ModulusBootstrapping.html#mathematical-expansion-of-the-highlevel-idea' id='QQ2-130-219'>Mathematical Expansion of the High-level Idea</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.3 <a href='ModulusBootstrapping.html#details-coefftoslot' id='QQ2-130-220'>Details: <span class='rm-lmss-10x-x-109'>CoeffToSlot</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.4 <a href='ModulusBootstrapping.html#details-evalexp' id='QQ2-130-221'>Details: <span class='rm-lmss-10x-x-109'>EvalExp</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.5 <a href='ModulusBootstrapping.html#details-slottocoeff' id='QQ2-130-222'>Details: <span class='rm-lmss-10x-x-109'>SlotToCoeff</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.6 <a href='ModulusBootstrapping.html#reducing-the-bootstrapping-overhead-by-sparsely-packing-ciphertext' id='QQ2-130-223'>Reducing the Bootstrapping Overhead by Sparsely Packing Ciphertext</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.7 <a href='ModulusBootstrapping.html#summary5' id='QQ2-130-224'>Summary</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.8 <a href='ModulusBootstrapping.html#reducing-the-bootstrapping-noise' id='QQ2-130-225'>Reducing the Bootstrapping Noise</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
