--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -138,6 +138,13 @@ rings.
 <br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertext.html#forward-proof-decoding-of-sparsely-packed-ciphertext'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.1 <a href='ModulusBootstrapping.html#highlevel-idea2'>High-level Idea</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.2 <a href='ModulusBootstrapping.html#mathematical-expansion-of-the-highlevel-idea'>Mathematical Expansion of the High-level Idea</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.3 <a href='ModulusBootstrapping.html#details-coefftoslot'>Details: <span class='rm-lmss-10x-x-109'>CoeffToSlot</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.4 <a href='ModulusBootstrapping.html#details-evalexp'>Details: <span class='rm-lmss-10x-x-109'>EvalExp</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.5 <a href='ModulusBootstrapping.html#details-slottocoeff'>Details: <span class='rm-lmss-10x-x-109'>SlotToCoeff</span></a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.6 <a href='ModulusBootstrapping.html#reducing-the-bootstrapping-overhead-by-sparsely-packing-ciphertext'>Reducing the Bootstrapping Overhead by Sparsely Packing Ciphertext</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.7 <a href='ModulusBootstrapping.html#summary5'>Summary</a></span>
+<br />   <span class='subsubsectionToc'>D-3.13.8 <a href='ModulusBootstrapping.html#reducing-the-bootstrapping-noise'>Reducing the Bootstrapping Noise</a></span>
    </div>
 
 
