--- a/contentsname.html
+++ b/contentsname.html
@@ -231,6 +231,27 @@ Polynomials</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.7 <a href='ModulusBootstrapping.html#summary5' id='QQ2-130-224'>Summary</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.8 <a href='ModulusBootstrapping.html#reducing-the-bootstrapping-noise' id='QQ2-130-225'>Reducing the Bootstrapping Noise</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
+<br />   <span class='subsectionToc'>D-4.1 <a href='EncodingandDecoding1.html#encoding-and-decoding1'>Encoding and Decoding</a></span>
+<br />   <span class='subsectionToc'>D-4.2 <a href='EncryptionandDecryption3.html#encryption-and-decryption3'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-4.3 <a href='CiphertexttoCiphertextAddition2.html#ciphertexttociphertext-addition2'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-4.4 <a href='CiphertexttoPlaintextAddition2.html#ciphertexttoplaintext-addition2'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-4.5 <a href='CiphertexttoPlaintextMultiplication2.html#ciphertexttoplaintext-multiplication2'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-4.6 <a href='textsfModDrop1.html#moddrop1'><span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
+                                                                                         
+                                                                                         
+<br />   <span class='subsectionToc'>D-4.7 <a href='ModulusSwitch.html#modulus-switch1'>Modulus Switch</a></span>
+<br />   <span class='subsubsectionToc'>D-4.7.1 <a href='ModulusSwitch.html#difference-between-modulus-switch-and-moddrop1' id='QQ2-138-235'>Difference between Modulus Switch and <span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
+<br />   <span class='subsectionToc'>D-4.8 <a href='CiphertexttoCiphertextMultiplication1.html#ciphertexttociphertext-multiplication1'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-4.9 <a href='HomomorphicKeySwitching3.html#homomorphic-key-switching3'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-4.10 <a href='HomomorphicRotationofInputVectorSlots2.html#homomorphic-rotation-of-input-vector-slots2'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1'>Modulus Bootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.1     <a href='ModulusBootstrapping1.html#the-reason-for-modulus-switch-from-ql-q' id='QQ2-142-240'>The     Reason     for     Modulus     Switch     from
+<!-- l. 241 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>q</mi></mrow><mrow><mi>l</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo><mover accent='true'><mrow><mi>q</mi></mrow><mo accent='true'>^</mo></mover></mrow></math></a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.2 <a href='ModulusBootstrapping1.html#modraise-instead-of-homomorphic-decryption' id='QQ2-142-241'><span class='rm-lmss-10x-x-109'>ModRaise </span>instead of Homomorphic Decryption</a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.3                   <a href='ModulusBootstrapping1.html#the-choice-of-' id='QQ2-142-242'>The                   Choice                   of
+<!-- l. 243 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝜀</mi></math></a></span>
+<br />   <span class='subsubsectionToc'>D-4.11.4                          <a href='ModulusBootstrapping1.html#generalization-to-delta-pr' id='QQ2-142-243'>Generalization                          to
+<!-- l. 244 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <msup><mrow><mi>p</mi></mrow><mrow><mi>r</mi></mrow></msup></mrow></math></a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary'>FHE Scheme Comparison and Summary</a></span>
    </div>
