--- a/00-main.html
+++ b/00-main.html
@@ -214,8 +214,19 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext' id='QQ2-129-213'>Sparsely Packing Ciphertext</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping' id='QQ2-130-215'>Modulus Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-131-227'>BGV Scheme</a></span>
-<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-132-228'>RNS-variant FHE Schemes</a></span>
-<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-133-229'>FHE Scheme Comparison and Summary</a></span>
+<br />   <span class='subsectionToc'>D-4.1 <a href='EncodingandDecoding1.html#encoding-and-decoding1' id='QQ2-132-228'>Encoding and Decoding</a></span>
+<br />   <span class='subsectionToc'>D-4.2 <a href='EncryptionandDecryption3.html#encryption-and-decryption3' id='QQ2-133-229'>Encryption and Decryption</a></span>
+<br />   <span class='subsectionToc'>D-4.3 <a href='CiphertexttoCiphertextAddition2.html#ciphertexttociphertext-addition2' id='QQ2-134-230'>Ciphertext-to-Ciphertext Addition</a></span>
+<br />   <span class='subsectionToc'>D-4.4 <a href='CiphertexttoPlaintextAddition2.html#ciphertexttoplaintext-addition2' id='QQ2-135-231'>Ciphertext-to-Plaintext Addition</a></span>
+<br />   <span class='subsectionToc'>D-4.5 <a href='CiphertexttoPlaintextMultiplication2.html#ciphertexttoplaintext-multiplication2' id='QQ2-136-232'>Ciphertext-to-Plaintext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-4.6 <a href='textsfModDrop1.html#moddrop1' id='QQ2-137-233'><span class='rm-lmss-10x-x-109'>ModDrop</span></a></span>
+<br />   <span class='subsectionToc'>D-4.7 <a href='ModulusSwitch.html#modulus-switch1' id='QQ2-138-234'>Modulus Switch</a></span>
+<br />   <span class='subsectionToc'>D-4.8 <a href='CiphertexttoCiphertextMultiplication1.html#ciphertexttociphertext-multiplication1' id='QQ2-139-236'>Ciphertext-to-Ciphertext Multiplication</a></span>
+<br />   <span class='subsectionToc'>D-4.9 <a href='HomomorphicKeySwitching3.html#homomorphic-key-switching3' id='QQ2-140-237'>Homomorphic Key Switching</a></span>
+<br />   <span class='subsectionToc'>D-4.10 <a href='HomomorphicRotationofInputVectorSlots2.html#homomorphic-rotation-of-input-vector-slots2' id='QQ2-141-238'>Homomorphic Rotation of Input Vector Slots</a></span>
+<br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1' id='QQ2-142-239'>Modulus Bootstrapping</a></span>
+<br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-143-244'>RNS-variant FHE Schemes</a></span>
+<br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-144-245'>FHE Scheme Comparison and Summary</a></span>
    </div>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x1-1000'></a>Acknowledgments</h5>
 <!-- l. 295 --><p class='noindent'>Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and dedicated comments,
