--- a/ModuloArithmetic1.html
+++ b/ModuloArithmetic1.html
@@ -224,7 +224,7 @@ negative, then this becomes smaller than the lower bound of the canonical residu
 <!-- l. 160 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>0</mn></math>), and thus a modulo reduction
 (i.e., addition by one or more <!-- l. 160 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>)
 is needed.
-</p><!-- l. 162 --><p class='indent'>   In <span class='rm-lmbx-10x-x-109'>??</span>, we design the <span class='rm-lmss-10x-x-109'>FastBConvEx </span>operation based on this beneficial property
+</p><!-- l. 162 --><p class='indent'>   In <a href='ExactFastBaseConversiontextsfFastBConvEx.html#exact-fast-base-conversion-fastbconvex'><span class='ts1-lmr10-x-x-109'>§</span>D-5.8<!-- tex4ht:ref: subsec:group-def  --></a>, we design the <span class='rm-lmss-10x-x-109'>FastBConvEx </span>operation based on this beneficial property
 of centered residue representation: in this algorithm design, we can simplify
 <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>u</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> to
 <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>μ</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>u</mi></mrow></math>, because we
