--- a/ModulusBootstrapping.html
+++ b/ModulusBootstrapping.html
@@ -898,10 +898,10 @@ step can be reduced by half. And the same is true for the <span class='rm-lmss-1
 <!-- l. 2093 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover></mrow><mrow><msup><mrow></mrow><mrow><mi>′</mi>
  </mrow></msup></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo><msup><mrow> <mstyle class='text'><mtext><span class="rotatebox" style="transform: rotate(-180deg);">  E </span class="rotatebox" style="transform: rotate(-180deg);"></mtext> </mstyle><mrow><mi>T</mi>
   </mrow></mrow> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msub><mrow><mover accent='true'><mrow><mi>m</mi></mrow><mo accent='true'>→</mo></mover></mrow><mrow><mi>c</mi></mrow></msub></msup>. This again
-reduces the number of homomorphic computations and memory requirement for the <span class='rm-lmss-10x-x-109'>SlotToCoeff </span>step by half.
+reduces the number of homomorphic computations and memory requirements for the <span class='rm-lmss-10x-x-109'>SlotToCoeff </span>step by half.
 Notice that <!-- l. 2093 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mstyle class='text'><mtext><span class="rotatebox" style="transform: rotate(-180deg);">  E </span class="rotatebox" style="transform: rotate(-180deg);"></mtext> </mstyle><mrow><mi>T</mi>
   </mrow></mrow></msup>
-is a matrix where those columns whose column index is a not a multiple of
+is a matrix where those columns whose column index is not a multiple of
 <!-- l. 2093 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>n</mi>
 </mrow><mrow><msup><mrow><mi>n</mi></mrow><mrow><mi>′</mi></mrow></msup></mrow></mfrac></mstyle></math> are zero. This zero-enforcement
 to the columns of <!-- l. 2093 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mstyle class='text'><mtext><span class="rotatebox" style="transform: rotate(-180deg);">  E </span class="rotatebox" style="transform: rotate(-180deg);"></mtext> </mstyle><mrow><mi>T</mi>
